1.39 beta 5: user-selectable display for laptimer mode.  Laps are only counted if crossed the line about 2m/s